--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 
       <!-- Email -->
       <a class="btn" href="mailto:gogkul.gp@theterp.in">
-        <span>gogkul.gp@theterp.in</span>
+        <span>gokul.gp@theterp.in</span>
       </a>
 
       <!-- LinkedIn -->
       <a class="btn" href="https://www.linkedin.com/in/gokul-gopakumar-39b152281?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener">LinkedIn</a>
 
       <!-- Instagram -->
-      <a class="btn" href="https://instagram.com/gokul.gopakumar" target="_blank" rel="noopener">@gokul.gopakumar</a>
+      <a class="btn" href="https://instagram.com/gokul.gopakumar" target="_blank" rel="noopener">Instagram</a>
 
       <!-- Visit Website -->
       <a class="btn" href="https://ananthanpadmanabhan.github.io/TERP/" target="_blank" rel="noopener">Website</a>
@@ -162,3 +162,4 @@
   </script>
 </body>
 </html>
+
