--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Gokul Gopakumar — Co-founder & MD, The Earth Reimagined Project (TERP). Quick contact & social links." />
   <meta name="theme-color" content="#0b0f14" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
-    /* same CSS as before */
     :root {
       --bg: #0b0f14;
       --card: #0f141a;
@@ -20,7 +20,7 @@
       --focus: #ffd7b5;
     }
     * { box-sizing: border-box; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-    html, body { height: 100%; overscroll-behavior-y: contain; }
+    html, body { height: 100%; }
     body { margin: 0; background: var(--bg); color: var(--text); display: grid; place-items: center; padding: 24px; position: relative; overflow: hidden; }
     body::before { content:''; position:absolute; top:50%; left:50%; width:150vmax; height:150vmax; background:radial-gradient(circle,#a4532250,transparent 70%); transform:translate(-50%,-50%) rotate(0deg); animation:backgroundPulse 40s linear infinite; }
     @keyframes backgroundPulse { 0%{transform:translate(-50%,-50%) rotate(0deg) scale(1);opacity:.1} 50%{transform:translate(-50%,-50%) rotate(180deg) scale(1.2);opacity:.2} 100%{transform:translate(-50%,-50%) rotate(360deg) scale(1);opacity:.1} }
@@ -29,7 +29,7 @@
     .header{display:flex;gap:16px;align-items:center;flex-wrap:wrap}
     .logo{width:90px;height:90px;border-radius:16px;background:#0c0f13;border:1px solid var(--outline);display:grid;place-items:center;overflow:hidden}
     .logo img{width:100%;height:100%;object-fit:cover}
-    h1{margin:0;font-size:1.5rem;line-height:1.25;font-weight:700}
+    h1{margin:0;font-size:1.5rem;line-height:1.25;font-weight:700;transition:opacity .6s ease}
     .role{color:var(--muted);margin-top:4px;font-weight:500;font-size:0.9rem}
     .badges{margin-top:8px;display:flex;gap:8px;flex-wrap:wrap}
     .pill{padding:6px 10px;border-radius:999px;font-size:.78rem;color:#ffe9db;background:linear-gradient(180deg,var(--brand),var(--brand-2));border:1px solid #8c411c;font-weight:500}
@@ -40,26 +40,52 @@
     .btn{position:relative;overflow:hidden;display:inline-flex;align-items:center;justify-content:center;gap:10px;padding:12px 16px;border-radius:12px;text-decoration:none;border:1px solid var(--outline);background:#0f151b;color:var(--text);font-weight:500;transition:transform .15s ease,border-color .3s ease,background .3s ease,box-shadow .3s ease;white-space:nowrap;cursor:pointer}
     .btn:hover{border-color:#2a3947;transform:translateY(-2px);box-shadow:0 4px 12px rgba(0,0,0,0.2)}
     .btn:active{transform:translateY(0)}
-    .btn::before{content:'';position:absolute;top:-50%;left:-50%;width:200%;height:200%;background:radial-gradient(circle,rgba(164,83,34,0.5),transparent 70%);transform:rotate(0deg);transition:opacity .3s ease,transform .3s ease;opacity:0}
-    .btn:hover::before{opacity:1;transform:rotate(180deg)}
-    .btn:focus-visible{outline:3px solid var(--focus);outline-offset:2px}
     .btn.primary{background:linear-gradient(180deg,#2b180c,#1a0f08);border-color:#2a1a12;box-shadow:inset 0 0 0 1px #2b180c,0 0 0 1px rgba(164,83,34,.35)}
     .btn.primary:hover{box-shadow:inset 0 0 0 1px #2b180c,0 4px 12px rgba(164,83,34,.45)}
     .note{margin-top:20px;color:var(--muted);font-size:.9rem;text-align:center}
     footer{margin-top:14px;color:#d6b49f;font-size:.86rem;text-align:center}
     .copy-notification{position:fixed;bottom:24px;left:50%;transform:translateX(-50%);background:#2a3947;color:var(--text);padding:12px 24px;border-radius:999px;opacity:0;visibility:hidden;transition:opacity 0.3s ease,visibility 0.3s ease;z-index:100}
     .copy-notification.show{opacity:1;visibility:visible}
+
+    /* Avatar block */
+    .avatar-container {display:none; align-items:center; gap:10px;}
+    .avatar-container.show {display:flex;}
+    .avatar svg {width:80px;height:80px;}
+    /* Add waving animation to the hand group inside SVG */
+    .wave-hand {transform-origin: bottom right; animation:wave 1s ease-in-out infinite;}
+    @keyframes wave {
+      0% { transform:rotate(0deg); }
+      25% { transform:rotate(20deg); }
+      50% { transform:rotate(0deg); }
+      75% { transform:rotate(-15deg); }
+      100%{ transform:rotate(0deg); }
+    }
+    .hi-text {font-weight:600;font-size:1.2rem;color:#ffd7b5;}
   </style>
 </head>
 <body>
   <main class="card" role="main" aria-labelledby="title">
-    <!-- Header -->
     <div class="header">
-      <div class="logo" aria-hidden="true">
-        <img src="terp-logo.jpg" alt="TERP logo">
-      </div>
+      <div class="logo"><img src="terp-logo.jpg" alt="TERP logo"></div>
       <div>
+        <!-- Default name -->
         <h1 id="title">Gokul Gopakumar</h1>
+
+        <!-- Avatar block -->
+        <div id="avatarBlock" class="avatar-container">
+          <div class="avatar">
+            <!-- Insert your uploaded SVG here -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
+              <circle cx="100" cy="100" r="90" fill="#2a3947"/>
+              <circle cx="100" cy="70" r="40" fill="#ffe0bd"/>
+              <g class="wave-hand">
+                <rect x="130" y="40" width="20" height="50" rx="10" fill="#ffe0bd"/>
+              </g>
+            </svg>
+          </div>
+          <div class="hi-text">Hi 👋</div>
+        </div>
+
         <div class="role"><strong>Co-founder &amp; MD</strong> — The Earth Reimagined Project (TERP)</div>
         <div class="badges">
           <span class="pill">Zero-waste</span>
@@ -69,72 +95,31 @@
       </div>
     </div>
 
-    <div class="divider" role="presentation"></div>
+    <div class="divider"></div>
 
-    <!-- Contact & Social Buttons -->
     <section class="grid" aria-label="Contact and social links">
-      <!-- WhatsApp chat -->
-      <a class="btn primary" href="https://wa.me/919188607278" target="_blank" rel="noopener">
-        <span>+91 9188607278</span>
-      </a>
-
-      <!-- Email -->
-      <a class="btn" href="mailto:gogkul.gp@theterp.in">
-        <span>gokul.gp@theterp.in</span>
-      </a>
-
-      <!-- LinkedIn -->
-      <a class="btn" href="https://www.linkedin.com/in/gokul-gopakumar-39b152281?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener">LinkedIn</a>
-
-      <!-- Instagram -->
-      <a class="btn" href="https://instagram.com/gokul.gopakumar" target="_blank" rel="noopener">Instagram</a>
-
-      <!-- Visit Website -->
-      <a class="btn" href="https://ananthanpadmanabhan.github.io/TERP/" target="_blank" rel="noopener">Website</a>
-
-      <!-- Share link -->
-      <button class="btn" id="shareBtn" aria-label="Share this page">Share</button>
+      <a class="btn primary" href="https://wa.me/919188607278" target="_blank">+91 9188607278</a>
+      <a class="btn" href="mailto:gogkul.gp@theterp.in">gokul.gp@theterp.in</a>
+      <a class="btn" href="https://www.linkedin.com/in/gokul-gopakumar-39b152281" target="_blank">LinkedIn</a>
+      <a class="btn" href="https://instagram.com/gokul.gopakumar" target="_blank">Instagram</a>
+      <a class="btn" href="https://ananthanpadmanabhan.github.io/TERP/" target="_blank">Website</a>
+      <button class="btn" id="shareBtn">Share</button>
     </section>
 
-    <!-- Professional note line -->
     <p class="note">Reimagining the possible: Data-driven, inclusive, and scalable climate solutions.</p>
-
-    <!-- Footer -->
     <footer>© TERP — The Earth Reimagined Project</footer>
   </main>
-  
+
   <div id="copy-notification" class="copy-notification">Link copied!</div>
 
-  <!-- SEO structured data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Gokul Gopakumar",
-    "jobTitle": "Co-founder & MD",
-    "worksFor": {"@type": "Organization","name": "The Earth Reimagined Project (TERP)"},
-    "telephone": "+91-9188607278",
-    "email": "gogkul.gp@theterp.in",
-    "sameAs": [
-      "https://www.linkedin.com/in/gokul-gopakumar-39b152281?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app",
-      "https://instagram.com/gokul.gopakumar"
-    ],
-    "url": "https://ananthanpadmanabhan.github.io/TERP/"
-  }
-  </script>
-
-  <!-- Share button -->
   <script>
+    // Share logic
     const shareBtn = document.getElementById("shareBtn");
     const notification = document.getElementById("copy-notification");
-
     const showNotification = () => {
       notification.classList.add("show");
-      setTimeout(() => {
-        notification.classList.remove("show");
-      }, 2000);
+      setTimeout(() => notification.classList.remove("show"), 2000);
     };
-
     if (navigator.share) {
       shareBtn.addEventListener("click", async () => {
         try {
@@ -143,23 +128,32 @@
             text: "Quick contact details for Gokul (TERP).",
             url: location.href
           });
-        } catch(e) {
-          console.error("Web Share API failed:", e);
-        }
+        } catch(e) { console.error("Web Share API failed:", e); }
       });
     } else {
       shareBtn.addEventListener("click", () => {
-        const url = location.href;
-        const tempInput = document.createElement("textarea");
-        tempInput.value = url;
-        document.body.appendChild(tempInput);
-        tempInput.select();
-        document.execCommand("copy");
-        document.body.removeChild(tempInput);
+        navigator.clipboard.writeText(location.href);
         showNotification();
       });
     }
+
+    // Animation sequence
+    window.addEventListener("load", () => {
+      const nameEl = document.getElementById("title");
+      const avatarBlock = document.getElementById("avatarBlock");
+      setTimeout(() => {
+        nameEl.style.opacity = "0";
+        setTimeout(() => {
+          nameEl.style.display = "none";
+          avatarBlock.classList.add("show");
+          setTimeout(() => {
+            avatarBlock.classList.remove("show");
+            nameEl.style.display = "block";
+            setTimeout(() => nameEl.style.opacity = "1", 100);
+          }, 3000);
+        }, 600);
+      }, 1000);
+    });
   </script>
 </body>
 </html>
-
